Complete swagger docs
